-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.2.1
-
None
- don't use "android" tool anymore we need to use use tools/bin/sdkmanager and tools/bin/avdmanager instead
- use gradle from Qt location (check https://bugreports.qt.io/browse/QTBUG-59236) - pending patch here: https://codereview.qt-project.org/#/c/187219
- is duplicated by
-
QTCREATORBUG-17821 Android test app won't compile
-
- Closed
-
-
QTCREATORBUG-17852 Building Android projects with Qt 5.8: SDK & build.xml
-
- Closed
-
- is required for
-
QTBUG-59236 Qt can't use latest Android SDK
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-17814 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
187219,4 | Copy gradle from Qt location if available | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
189241,4 | Update only old gradle distributionUrl | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
191125,7 | Android: Add Android tool manager | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
191126,7 | Android: Add system image information for each platform | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
191127,9 | Android: Use sdkmanager tool | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
191128,9 | Android: Use avdmanager tool | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |