Copy gradle from Qt location if available

Task-number: QTCREATORBUG-17814
Change-Id: I4252c9dfc2a2d7208dee04b734e12d77c82f5eae
Reviewed-by: Vikas Pachdha <vikas.pachdha@qt.io>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>